--- a/app/styles/themes/blue.scss
+++ b/app/styles/themes/blue.scss
@@ -11,7 +11,10 @@
 .top-nav > li > a{
   color: #fff;
 }
-
+.sidebar_toggle{
+  background-color: #16232c;
+  color: #fff;
+}
 .side-nav{
   background-color: #16232c;
 }
