--- a/app/styles/themes/blue.css
+++ b/app/styles/themes/blue.css
@@ -9,6 +9,10 @@
 .top-nav > li > a {
   color: #fff; }
 
+.sidebar_toggle {
+  background-color: #16232c;
+  color: #fff; }
+
 .side-nav {
   background-color: #16232c; }
 
