Added letter spacing to buttons. Fixed the offset of the right button.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -40,10 +40,11 @@ body{
 }
 .btn-default {
   color: #647f92;
-  border-radius: 2px;
   font-size: 11px;
+  letter-spacing: 0.7px;
   height: 33px;
   width: 106px;
+  border-radius: 2px;
 }
 .side-nav li{
   width: 100%;
