--- a/app/styles/theme_base.scss
+++ b/app/styles/theme_base.scss
@@ -132,6 +132,13 @@ li.message-preview {
   border-bottom: 1px solid rgba(0,0,0,.15);
 }
 
+li.pokedex-entry {
+  margin-left: 1px;
+  width: 70px;
+  float: left;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+}
+
 li.message-preview>a {
   padding-top: 15px;
   padding-bottom: 15px;
