--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,23 +1,38 @@
-body{
+body {
   font-family: 'Montserrat', sans-serif;
 }
-#wrapper.sidebar_hidden{
+
+#wrapper{
+  transition: all 1s ease-in-out;
+}
+#wrapper.sidebar_hidden {
   padding-left: 0px;
 }
 
-.navbar-header{
+.navbar-header {
   width: 225px;
   border: none;
 }
-.sidebar_hidden{
-  .sidebar_toggle{
+
+.navbar-nav.side-nav{
+  transition: all 1s ease-in-out;
+  &.sidebar_hidden{
+    left: 0;
+  }
+}
+
+.sidebar_hidden {
+  .sidebar_toggle {
     position: absolute;
     left: 0;
   }
 }
+
 .sidebar_toggle {
-  position: relative;
-  top: 100px;
+  transition: all 1s ease-in-out;
+  position: absolute;
+  top: 120px;
+  left: 225px;
   padding: 5px;
   display: inline-block;
   cursor: pointer;
@@ -28,16 +43,19 @@ body{
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
-.navbar-fixed-top{
+
+.navbar-fixed-top {
   border: none;
 }
-.container-fluid, #page-wrapper{
+
+.container-fluid, #page-wrapper {
   padding: 0 !important;
 }
 
 .navbar {
   height: 76px;
 }
+
 .btn-default {
   color: #647f92;
   font-size: 11px;
@@ -46,7 +64,8 @@ body{
   width: 106px;
   border-radius: 2px;
 }
-.side-nav li{
+
+.side-nav li {
   width: 100%;
   color: #647f94;
 }
@@ -55,21 +74,23 @@ body{
   line-height: 72px;
 }
 
-.top-nav button{
+.top-nav button {
   margin-left: 18px;
 }
 
-.offset-right{
+.offset-right {
   margin-right: 36px;
 }
-.navbar-header{
+
+.navbar-header {
   height: 76px;
 }
-.navbar-header a{
+
+.navbar-header a {
   line-height: 48px;
 }
 
-@media (min-width: 768px){
+@media (min-width: 768px) {
   .side-nav {
     top: 76px !important;
   }
@@ -80,9 +101,115 @@ body{
   display: inline;
 }
 
-.saturate{
+.saturate {
   filter: grayscale(1);
   -webkit-filter: grayscale(1);
   -moz-filter: grayscale(1);
   -o-filter: grayscale(1);
+}
+
+.onoffswitch {
+  position: relative;
+  width: 55px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
+.onoffswitch-checkbox {
+  display: none;
+}
+
+.onoffswitch-label {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  height: 20px;
+  padding: 0;
+  line-height: 20px;
+  border: 0px solid #FFFFFF;
+  border-radius: 30px;
+  background-color: #9E9E9E;
+}
+
+.onoffswitch-label:before {
+  content: "";
+  display: block;
+  width: 30px;
+  margin: -5px;
+  background: #FFFFFF;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 31px;
+  border-radius: 30px;
+  box-shadow: 0 6px 12px 0px #757575;
+}
+
+
+.side_menu {
+  padding-left: 0px;
+  li {
+    list-style-type: none;
+    .title {
+      color: #fff;
+      text-align: center;
+      text-align: center;
+      background-color: #fff;
+      padding: 2px;
+    }
+    .menu_row {
+      padding-left: 5px;
+      background-color: #1e3344;
+      .progress_container {
+
+        padding-right: 5px;
+        padding-bottom: 5px;
+        .progress {
+          height: 10px;
+          margin-bottom: 0px;
+        }
+      }
+    }
+  }
+}
+.custom-marker {
+  padding: 0;
+
+  .trainer_marker {
+    font-size: 1em;
+    padding: 5px;
+    border: 2px solid;
+    background: #fff;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+  }
+
+  .triangle{
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 7px 6px 0;
+    border-color: #fff transparent;
+    display: block;
+    width: 0;
+    z-index: 1;
+    margin-left: -6px;
+    bottom: -6px;
+    left: 50%;
+  }
+
+  .trainer_marker1:before {
+    content: '';
+    position: absolute;
+    border-style: solid;
+    border-width: 7px 6px 0;
+    border-color: #7F7F7F transparent;
+    display: block;
+    width: 0;
+    z-index: 0;
+    margin-left: -6px;
+    bottom: -7px;
+    left: 50%;
+  }
 }
