--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -264,3 +264,23 @@ body {
     overflow-y: scroll;
   }
 }
+.sidebar_toggle{
+  .caret{
+    transition: all 1s ease-in-out;
+    -webkit-transform: rotate(-90deg);
+    -moz-transform: rotate(-90deg);
+    -o-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+  }
+}
+
+.sidebar_toggle.sidebar_shown{
+  .caret{
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+  }
+}
