--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -218,4 +218,22 @@ body {
   -ms-transform: rotate(90deg);
   transform: rotate(90deg); }
 
+.map_console {
+  height: 200px;
+  width: calc(100% - 225px);
+  position: absolute;
+  bottom: 0px;
+  float: left;
+  background-color: #fff;
+  right: 0;
+  overflow: hidden; }
+
+.console {
+  height: 100%; }
+
+.console .output {
+  font-size: 10px;
+  height: 120px;
+  overflow-y: scroll; }
+
 /*# sourceMappingURL=main.css.map */
