--- a/app/views/directives/consoleoutput.html
+++ b/app/views/directives/consoleoutput.html
@@ -1,10 +1,9 @@
 <div id="" class="console">
     <uib-tabset active="active">
         <uib-tab index="$index + 1" ng-repeat="bot in bots " heading="{{bot.name}}">
-            Console output from: {{bot.name}}
             <div class="output" auto-scroll>
-                <div ng-repeat="(key, line) in buffer[bot.name] track by $index">
-                    {{line}}
+                <div ng-repeat="(key, line) in buffer[bot.name] track by $index" class="event-{{line.event}}">
+                    [{{line.time | date:'H:m:s'}}] {{line.msg}}
                 </div>
             </div>
         </uib-tab>
