--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -146,26 +146,29 @@ body {
   border-radius: 30px;
   box-shadow: 0 6px 12px 0px #757575;
 }
-.percent-blue{
+
+.percent-blue {
   color: #337ab7 !important;
 }
-.progress-bar{
-  span{
+
+.progress-bar {
+  span {
     text-align: center;
   }
 }
+
 .side_menu {
   padding-left: 0px;
-  .menu_row{
+  .menu_row {
     border-left: 10px solid;
     .panel {
       background-color: #1e3344;
-      .panel-heading{
-        a{
+      .panel-heading {
+        a {
           background-color: transparent !important;
         }
       }
-      .panel-body{
+      .panel-body {
         padding: 10px;
         .stat_pane {
           .inventory_btns {
@@ -226,46 +229,47 @@ body {
   }
 }
 
-.item_container{
-  .item{
+.item_container {
+  .item {
     display: inline-block;
     width: 25%;
     height: 50px;
-    img{
+    img {
       height: 40px;
       width: 40px;
     }
   }
 }
 
-.pokemon_container{
-  .pokemon{
+.pokemon_container {
+  .pokemon {
     text-align: center;
-    .dropdown{
+    .dropdown {
       position: absolute;
     }
     display: inline-block;
-    .greyscale{
+    .greyscale {
       filter: gray; /* IE6-9 */
       filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
       -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
     }
-    img{
+    img {
       height: 75px;
       width: 75px;
     }
   }
 }
 
-.modal{
-  .modal-body{
+.modal {
+  .modal-body {
 
     max-height: 500px;
     overflow-y: scroll;
   }
 }
-.sidebar_toggle{
-  .caret{
+
+.sidebar_toggle {
+  .caret {
     transition: all 1s ease-in-out;
     -webkit-transform: rotate(-90deg);
     -moz-transform: rotate(-90deg);
@@ -275,8 +279,8 @@ body {
   }
 }
 
-.sidebar_toggle.sidebar_shown{
-  .caret{
+.sidebar_toggle.sidebar_shown {
+  .caret {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
     -o-transform: rotate(90deg);
@@ -284,7 +288,8 @@ body {
     transform: rotate(90deg);
   }
 }
-.map_console{
+
+.map_console {
   height: 200px;
   width: calc(100% - 225px);
   position: absolute;
@@ -294,11 +299,79 @@ body {
   right: 0;
   overflow: hidden;
 }
-.console{
+
+.console {
   height: 100%;
+  [active] {
+    height: 100%;
+    .tab-content {
+      height: calc(100% - 40px);
+      .tab-pane {
+        height: 100%;
+      }
+    }
+  }
 }
-.console .output{
-  font-size: 10px;
-  height: 120px;
-  overflow-y: scroll;
+
+.console {
+  .nav {
+    background-color: #1e3344;
+    border: 0;
+    height: 40px;
+    .uib-tab.active {
+      a {
+        background-color: #415f79;
+        color: #fff;
+      }
+    }
+    .uib-tab {
+      background-color: #1e3344;
+      a ,a:hover{
+        color: #337ab7;
+        border: 0;
+        border-radius: 0;
+      }
+      a:hover{
+        background-color: #1e3344;
+        text-decoration: underline;
+      }
+    }
+  }
+
+  .output {
+    font-family: arial, "lucida console", sans-serif;
+    padding-left: 5px;
+    padding-bottom: 5px;
+    font-size: 11px;
+    height: 100%;
+    overflow-y: scroll;
+    color: #fff;
+    background: #000;
+    .event- {
+
+      &bot_exit, &api_error, &config_error, &item_discard_fail, &login_failed, &lucky_egg_error, &move_to_map_pokemon_fail, &no_pokeballs,
+      &pokemon_capture_failed, &pokemon_fled, &pokemon_inventory_full, &pokemon_nickname_invalid, &pokemon_vanished, &softban, &threw_berry_failed
+      &unknown_spin_result, &unset_pokemon_nickname, &vip_pokemon {
+        color: #ff473d;
+      }
+
+      &bot_start, &egg_hatched, &incubate, &item_discarded, &keep_best_release, &level_up, &level_up_reward, &login_successful,
+      &move_to_map_pokemon_encounter, &next_sleep, &pokemon_evolved, &pokemon_release {
+        color: green;
+      }
+      &egg_already_incubating, &future_pokemon_release, &incubator_already_used, &inventory_full, &location_cache_error,
+      &location_cache_ignored, &next_egg_incubates, &pokemon_appeared, &pokemon_not_in_range, &pokestop_empty,
+      &pokestop_searching_too_often, &skip_evolve {
+        color: yellow;
+      }
+      &pokemon_caught {
+        color: #00daff
+      }
+      &spun_pokestop {
+        color: cyan;
+      }
+
+    }
+
+  }
 }
