Fix console in build

--- a/app/views/directives/consoleoutput.html
+++ b/app/views/directives/consoleoutput.html
@@ -1,11 +1,1 @@
-<div id="" class="console">
-    <uib-tabset active="active">
-        <uib-tab index="$index + 1" ng-repeat="bot in bots " heading="{{bot.name}}">
-            <div class="output" auto-scroll>
-                <div ng-repeat="(key, line) in buffer[bot.name] track by $index" class="event-{{line.event}}">
-                    [{{line.time | date:'H:m:s'}}] {{line.msg}}
-                </div>
-            </div>
-        </uib-tab>
-    </uib-tabset>
-</div>
+<div id="" class="console"><uib-tabset active="active"><uib-tab index="$index + 1" ng-repeat="bot in bots " heading="{{bot.name}}"><div class="output" auto-scroll><div ng-repeat="(key, line) in buffer[bot.name] track by $index" class="event-{{line.event}}">[{{line.time | date:\'H:m:s\'}}] {{line.msg}}</div></div></uib-tab></uib-tabset></div>
