Remove pokemon dropdown

--- a/app/views/modals/Pokebag.html
+++ b/app/views/modals/Pokebag.html
@@ -6,7 +6,7 @@
     <div class="pokemon_container">
         <div class="col-xs-2" ng-repeat="pokemon in selected_bot.pokemons track by $index">
             <img ng-src="./images/pokemon/{{pokemon.pid}}.png" fallback-src="'./items/items/0.png'"/>
-
+<!--
                 <span uib-dropdown on-toggle="toggled(open)">
                   <a href id="simple-dropdown" uib-dropdown-toggle class="dropdown">
                    <span class="caret"></span>
@@ -22,7 +22,7 @@
                       <a href>Transfer</a>
                     </li>
                   </ul>
-                </span>
+                </span> -->
 
             <div class="pokemon_stats">
                 <div class="name">{{pokemon.name}}</div>
