Love you too google maps

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -1,5 +1,7 @@
 <div ng-controller="MapCtrl">
-    <ng-map auto-size-container center="{{ map_center }}" zoom="{{ zoom }}">
+    <div map-lazy-load="https://maps.google.com/maps/api/js"
+         map-lazy-load-params="{{googleMapsUrl}}">
+        <ng-map auto-size-container center="{{ map_center }}" zoom="{{ zoom }}">
         <span ng-repeat="bot in bots" ng-if="bot.shown_on_map">
             <custom-marker position="[{{bot.position[0]}}, {{bot.position[1]}}]">
                 <div class="trainer_marker" ng-style="{'border-color': bot.color }">
@@ -11,22 +13,33 @@
                 </div>
             </custom-marker>
             <shape name="polyline"
-               path="{{bot.location_history}}"
-               geodesic="true"
-               stroke-color="{{bot.color}}"
-               stroke-opacity="1.0"
-               stroke-weight="2">
+                   path="{{bot.location_history}}"
+                   geodesic="true"
+                   stroke-color="{{bot.color}}"
+                   stroke-opacity="1.0"
+                   stroke-weight="2">
             </shape>
 
 
         </span>
 
-        <custom-marker ng-repeat="pokemon in map_pokemons" position="{{pokemon.position}}">
-            <div>
-                <img src="images/pokemon/{{pokemon.id}}.png"/>
-            </div>
-        </custom-marker>
-    </ng-map>
+            <custom-marker ng-repeat="pokemon in map_pokemons" position="{{pokemon.position}}"
+                           on-click="showPokemon(event, pokemon)">
+                <div>
+                    <img src="images/pokemon/{{pokemon.id}}.png"/>
+                </div>
+            </custom-marker>
+            <info-window id="pokemon" on-mouseover="vm.mouseover()">
+                <div ng-non-bindable="">
+                    Lat: {{anchor.getPosition().lat()}}<br/>
+                    Lng: {{anchor.getPosition().lng()}}<br/>
+                    <ul>
+                        <li ng-repeat='item in vm.store.items'>{{item}}</li>
+                    </ul>
+                </div>
+            </info-window>
+        </ng-map>
+    </div>
 </div>
 
 <div console-output class="map_console">
