--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,11 @@ html, body {
   top: auto !important;
   right: auto !important;
   bottom: 10%;
-  left:7%;  
+  left:7%;
+  z-index: 0
+}
+#toast-container > .toast {
+    float: left;
 }
 #bots-list {
 	max-height: 80vh;
