--- a/css/main.css
+++ b/css/main.css
@@ -66,12 +66,15 @@ html, body {
 #toast-container {
   top: auto !important;
   right: auto !important;
-  bottom: 10%;
-  left:7%;
-  z-index: 0
+  bottom: 5%;
+  left:3%;
+  z-index: 0;
+  opacity: 0.95;
 }
 #toast-container > .toast {
   float: left;
+  font-size: 13px;
+  min-height:20px;
 }
 #bots-list {
   max-height: 80vh;
@@ -114,7 +117,7 @@ html, body {
   display: none;
   position: fixed;
   height: 50vh;
-  width: 360px;
+  width: 660px;
   z-index: 5;
   left: 10px;
   bottom: 10px;
