--- a/css/main.css
+++ b/css/main.css
@@ -264,3 +264,7 @@ html, body {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
 }
+span.tooltipped:hover {
+  font-weight: bold;
+  color: #039be5;
+}
